--- a/src/AppBundle/Resources/views/receipt_pdf.html.twig
+++ b/src/AppBundle/Resources/views/receipt_pdf.html.twig
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title of the PDF</title>
+        <title>{{ title }}</title>
     </head>
     <body>
         <h4>{{ title }}</h4>
