--- a/src/AppBundle/Resources/views/includes/sidebar.html.twig
+++ b/src/AppBundle/Resources/views/includes/sidebar.html.twig
@@ -14,26 +14,9 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-        <a class="nav-link" href="{{ url('indexAction_url') }}">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span></a>
-    </li>
-
-    <!-- Divider -->
-    <hr class="sidebar-divider">
-
-    <!-- Heading -->
-    <div class="sidebar-heading">
-        Management
-    </div>
-
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
         <a class="nav-link" href="{{ url('renderReceipts_url') }}">
-            <i class="fas fa-receipt"></i>
-            <span>Shopping baskets</span>
-        </a>
-        <a class="collapse-item" ></a>
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Shopping baskets</span></a>
     </li>
 
     <!-- Divider -->
